crates/oxc_react_compiler/tests/snapshots/global-types__set-for-of-iterate-values.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/global-types/set-for-of-iterate-values.ts
---
import { makeArray, useHook } from "shared-runtime";
function useFoo(t0: {
	propArr: Array<number>;
}) {
	const { propArr } = t0;
	const s1 = new Set([
		1,
		2,
		3
	]);
	s1.add(makeArray(propArr[0]));
	useHook();
	const s2 = new Set();
	for (const el of s1.values()) {
		s2.add(el);
	}
	return [s1, s2];
}
export const FIXTURE_ENTRYPOINT = {
	fn: useFoo,
	params: [{ propArr: [
		7,
		8,
		9
	] }],
	sequentialRenders: [
		{ propArr: [
			7,
			8,
			9
		] },
		{ propArr: [
			7,
			8,
			9
		] },
		{ propArr: [
			7,
			8,
			10
		] }
	]
};
